# mario-constructor-master

./: CMakeLists.txt  Help Manual.odt  MarioForever.cbp  MarioForever.depend  MarioForever.layout  MarioWorker.cbp  MarioWorker.cscope_file_list  MarioWorker.depend  MarioWorker.layout  README.md  Readme.txt  ResourcesRemover.cbp  ResourcesRemover.depend  ResourcesRemover.layout  contextParams.ini  game.ini  inputParams.ini  mcm-editor.desktop.in  mcm-game.desktop.in
Data/Gfx/: Thumbs.db
Data/Shaders/: Shader_DefaultVertex.txt  Shader_WorldBlurH.txt  Shader_WorldBlurV.txt
Headers/: gglobals.hpp  globals.hpp
Headers/Bonuses/: bonus_beetblock.hpp  bonus_beetblockinv.hpp  bonus_block.hpp  bonus_blockinv.hpp  bonus_brick.hpp  bonus_coin.hpp  bonus_coinblock.hpp  bonus_coinblockinv.hpp  bonus_coinbrick.hpp  bonus_flowerblock.hpp  bonus_flowerblockinv.hpp  bonus_lifeblock.hpp  bonus_lifeblockinv.hpp  bonus_luiblock.hpp  bonus_luiblockinv.hpp  bonus_mushroomblock.hpp  bonus_mushroomblockinv.hpp  bonus_poisonblock.hpp  bonus_poisonblockinv.hpp  bonus_starblock.hpp  bonus_starblockinv.hpp  bonus_switch.hpp  bonus_toggle.hpp
Headers/Core/: collider.hpp  effect.hpp  gscene.hpp  matrix.hpp  pawn.hpp  placeable.hpp  platformfall.hpp  platformmov.hpp  projectile.hpp  scene.hpp  scene.hpp.gch  warp.hpp
Headers/Graphics/: button.hpp  case.hpp  centipedeentity.hpp  checkbutton.hpp  dragger.hpp  elementbutton.hpp  emitter.hpp  entity.hpp  entityj.hpp  entitymultitext.hpp  entityrotation.hpp  entwarps.hpp  fallplatformentity.hpp  glightentity.hpp  gmarkerentity.hpp  gtile.hpp  gtrigger.hpp  horizontalenemyentity.hpp  horizontalplatformentity.hpp  infobutton.hpp  levelendentity.hpp  lightentity.hpp  markerentity.hpp  podoboodentity.hpp  podobooentity.hpp  podoboolentity.hpp  podoboorentity.hpp  regulator.hpp  rotodiscentity.hpp  spritefont.hpp  tile.hpp  trace.hpp  trigger.hpp  verticalenemyentity.hpp  verticalplatformentity.hpp
Headers/Hazards/: hazard_cannon.hpp  hazard_cannonhb.hpp  hazard_cannonhoming.hpp  hazard_cannonhominghb.hpp  hazard_cannonhominght.hpp  hazard_cannonhomingvl.hpp  hazard_cannonhomingvr.hpp  hazard_cannonht.hpp  hazard_cannonvl.hpp  hazard_cannonvr.hpp  hazard_centipede.hpp  hazard_lava.hpp  hazard_lavab.hpp  hazard_laval.hpp  hazard_lavalauncher.hpp  hazard_lavalauncherl.hpp  hazard_lavalauncherr.hpp  hazard_lavalaunchervl.hpp  hazard_lavalaunchervr.hpp  hazard_lavar.hpp  hazard_lavat.hpp  hazard_podoboo.hpp  hazard_podoboob.hpp  hazard_podoboofountain.hpp  hazard_podoboofountainb.hpp  hazard_podoboofountainl.hpp  hazard_podoboofountainr.hpp  hazard_podoboofountaint.hpp  hazard_podobool.hpp  hazard_podoboor.hpp  hazard_podoboot.hpp  hazard_rotodisc.hpp  hazard_rotodiscc.hpp  hazard_rotodisccc.hpp  hazard_rotodiscrc.hpp  hazard_rotodiscrcc.hpp  hazard_spike.hpp  hazard_spikelauncher.hpp  hazard_spikelauncherb.hpp  hazard_spikelaunchert.hpp
Headers/Marks/: mark_checkpoint.hpp  mark_lavaplane.hpp  mark_levelend.hpp  mark_liquidplane.hpp  mark_mario.hpp  mark_platformcloudfall.hpp  mark_platformcloudmoveh.hpp  mark_platformcloudmovev.hpp  mark_platformcloudtouchh.hpp  mark_platformcloudtouchv.hpp  mark_platformredfall.hpp  mark_platformredmoveh.hpp  mark_platformredmovev.hpp  mark_platformredtouchh.hpp  mark_platformredtouchv.hpp  mark_platformshortfall.hpp  mark_platformshortmoveh.hpp  mark_platformshortmovev.hpp  mark_platformshorttouchh.hpp  mark_platformshorttouchv.hpp  mark_platformstonefall.hpp  mark_platformstonemoveh.hpp  mark_platformstonemovev.hpp  mark_platformstonetouchh.hpp  mark_platformstonetouchv.hpp  mark_spring.hpp  mark_waterplane.hpp
Headers/Miscs/: effect_coin.hpp  effect_fire.hpp  effect_lavasplash.hpp  effect_score.hpp  effect_shard.hpp  effect_splash.hpp  projectile_beet.hpp  projectile_bulletbill.hpp  projectile_enemybeet.hpp  projectile_enemyfireball.hpp  projectile_fireball.hpp  projectile_flame.hpp  projectile_hammer.hpp  projectile_lava.hpp  projectile_plantfireball.hpp  projectile_podoboo.hpp  projectile_silverhammer.hpp  projectile_spike.hpp
Headers/Sceneries/: scenery_bush.hpp  scenery_cloud.hpp  scenery_scroll.hpp  scenery_static.hpp  scenery_waterfall.hpp
Headers/Sprites/: fallable.hpp  gotcollision.hpp  gotspeed.hpp  sprite_beet.hpp  sprite_beetbro.hpp  sprite_bowser.hpp  sprite_brother.hpp  sprite_buzzybeetle.hpp  sprite_cheepcheep.hpp  sprite_cheepcheepblue.hpp  sprite_cheepcheepgreen.hpp  sprite_cheepcheepred.hpp  sprite_cheepcheepyellow.hpp  sprite_firebro.hpp  sprite_flower.hpp  sprite_goomba.hpp  sprite_goombagrey.hpp  sprite_hammerbro.hpp  sprite_koopa.hpp  sprite_koopablue.hpp  sprite_koopagreen.hpp  sprite_koopared.hpp  sprite_koopayellow.hpp  sprite_lakitu.hpp  sprite_lakitudark.hpp  sprite_lakitugold.hpp  sprite_lakituwhite.hpp  sprite_life.hpp  sprite_lui.hpp  sprite_mushroom.hpp  sprite_paratroopa.hpp  sprite_paratroopablueh.hpp  sprite_paratroopabluej.hpp  sprite_paratroopabluev.hpp  sprite_paratroopagreenh.hpp  sprite_paratroopagreenj.hpp  sprite_paratroopagreenv.hpp  sprite_paratrooparedh.hpp  sprite_paratrooparedj.hpp  sprite_paratrooparedv.hpp  (+30 more)
Levels/: Cavern Rising.cml  Fishy Swamp.cml  Haunted Halls.cml  Skyland.cml  Soaked Desert.cml  Starry Assault.cml  Sunset Maze.cml  Sweet Walk.cml  Wet Hills.cml
Resource/: gresources.rc  resources.rc
Sources/: gmain.cpp  levelconverter.cpp  main.cpp  resourcesremover.cpp
Sources/Bonuses/: bonus_beetblock.cpp  bonus_beetblockinv.cpp  bonus_block.cpp  bonus_blockinv.cpp  bonus_brick.cpp  bonus_coin.cpp  bonus_coinblock.cpp  bonus_coinblockinv.cpp  bonus_coinbrick.cpp  bonus_flowerblock.cpp  bonus_flowerblockinv.cpp  bonus_lifeblock.cpp  bonus_lifeblockinv.cpp  bonus_luiblock.cpp  bonus_luiblockinv.cpp  bonus_mushroomblock.cpp  bonus_mushroomblockinv.cpp  bonus_poisonblock.cpp  bonus_poisonblockinv.cpp  bonus_starblock.cpp  bonus_starblockinv.cpp  bonus_switch.cpp  bonus_toggle.cpp
Sources/Core/: effect.cpp  matrix.cpp  pawn.cpp  placeable.cpp  platformfall.cpp  platformmov.cpp  projectile.cpp
Sources/Graphics/: button.cpp  case.cpp  (+29 more)
Worlds/: Demo World.cmw
(+187 files in other folders)
